@@ -1,1 +1,1 @@
-4.0.0beta4
+4.0.0beta5
